# dilla-chat

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  berra.sh  install.sh  package-lock.json  sonar-project.properties
.claude-flow/: daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  performance.json  security-audit.json  test-gaps.json
.full-stack-feature/: 01-requirements.md  code-review-report.md  state.json
.github/: AUTO_FIX.md  CLAUDE_TRACKING.md  test-auto-fix.sh
.github/scripts/: README.md  list-claude-issues.py  list-claude-issues.sh
.github/workflows/: auto-fix.yml  ci.yml  claude-auto-fix.yml  claude-code-review.yml  claude.yml  docker-dev.yml  docker.yml  pages.yml  release.yml  sonarcloud.yml
client/: coverage-summary.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
client/coverage/: clover.xml  coverage-final.json  index.html  lcov.info
client/coverage/hooks/: index.html  useKeyboardShortcuts.ts.html  useMediaQuery.ts.html
client/coverage/lcov-report/: index.html
client/coverage/pages/: AppLayout.css.html  AppLayout.tsx.html  index.html
client/coverage/services/: api.ts.html  cryptoCore.ts.html  index.html  keyStore.ts.html  messageCache.ts.html  notifications.ts.html  platform.ts.html  webrtc.ts.html
client/coverage/stores/: audioSettingsStore.ts.html  authStore.ts.html  dmStore.ts.html  index.html  messageStore.ts.html  presenceStore.ts.html  teamStore.ts.html  telemetryStore.ts.html  themeStore.ts.html  threadStore.ts.html  userSettingsStore.ts.html  voiceStore.ts.html
client/coverage/themes/: index.html  themes.ts.html
client/coverage/utils/: colors.ts.html  index.html
client/public/: noise-suppressor-worklet.js
client/public/themes/: custom-theme-template.css
client/scripts/: copy-ort-wasm.cjs
client/src/: App.css  App.tsx  index.css  tailwind.test.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: auth_page.html  auth_server.rs  crypto.rs  keystore.rs  main.rs
client/src/hooks/: useCryptoRestore.ts  useFocusTrap.test.ts  useFocusTrap.ts  useIdentityBackup.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMediaQuery.test.ts  useMediaQuery.ts  useMessageDecryption.test.ts  useMessageDecryption.ts  usePresenceEvents.ts  useTeamSync.test.ts  useTeamSync.ts  useVoiceConnection.ts
client/src/pages/: AppLayout.css  AppLayout.responsive.test.tsx  AppLayout.test.tsx  AppLayout.tsx  ChannelView.test.tsx  ChannelView.tsx  CreateIdentity.test.tsx  CreateIdentity.tsx  JoinTeam.test.tsx  JoinTeam.tsx  Login.test.tsx  Login.tsx  NotFound.css  NotFound.test.tsx  NotFound.tsx  PublicShell.css  PublicShell.tsx  RecoverFromServer.tsx  SetupAdmin.test.tsx  SetupAdmin.tsx  TeamSettings.css  TeamSettings.test.tsx  TeamSettings.tsx  UserSettings.css  UserSettings.test.tsx  UserSettings.tsx
client/src/services/: api.test.ts  api.ts  authReconnect.test.ts  authReconnect.ts  crypto.test.ts  crypto.ts  cryptoCore.test.ts  cryptoCore.ts  fetchWithTimeout.test.ts  fetchWithTimeout.ts  keyStore.test.ts  keyStore.ts  messageCache.test.ts  messageCache.ts  micTest.test.ts  micTest.ts  mockApi.ts  platform.ts  (+18 more)
docs/: go-to-rust-migration-evaluation.md  go-to-rust-rewrite-plan.md  index.html  install.sh  style.css  theming.md
docs/downloads/: index.html
docs/fonts/: fonts.css
scripts/: generate-voice-fixtures.py  install-proxmox-lxc.sh  reexport-dfn3-onnx.py
scripts/spike/: .gitignore  README.md  package.json  test-dfn3-availability.mjs  test-vfl-availability.mjs
server-rs/: Cargo.toml  Cross.toml  build.rs  dev.sh
server-rs/assets/voice-models/dfn3-v2/: df_dec.onnx  enc.onnx  erb_dec.onnx
server-rs/cross/: aarch64.Dockerfile
server-rs/migrations/: 001_initial.sql  002_bans.sql  003_dm_enhancements.sql  004_threads.sql  005_reactions_attachments.sql  007_nullable_fks.sql  008_channel_reads.sql
server-rs/src/: auth.rs  config.rs  error.rs  main.rs
server-rs/src/api/: auth_handlers.rs  channels.rs  dms.rs  federation.rs  helpers.rs  invites.rs  messages.rs  mod.rs  prekeys.rs  presence.rs  reactions.rs  roles.rs  teams.rs  tests.rs  theme.rs  threads.rs  uploads.rs  users.rs  voice.rs
server-rs/src/db/: attachment_queries.rs  ban_queries.rs  dm_queries.rs  invite_queries.rs  message_queries.rs  mod.rs  models.rs  permission_queries.rs  prekey_queries.rs  queries.rs  reaction_queries.rs  read_queries.rs  settings_queries.rs  sync_queries.rs  thread_queries.rs  user_queries.rs
server-rs/src/federation/: join.rs  mod.rs  sync.rs  transport.rs
server-rs/src/observability/: mod.rs
server-rs/src/presence/: mod.rs
server-rs/src/telemetry/: adapter.rs  mod.rs  sentry.rs
server-rs/src/voice/: mod.rs  room.rs  sfu_bridge.rs  sfu_helpers.rs  signaling.rs  turn.rs
server-rs/src/webapp/: mod.rs
server-rs/src/ws/: client.rs  events.rs  hub.rs  mod.rs  tests.rs
server-rs/src/ws/handlers/: dm.rs  message.rs  mod.rs  reaction.rs  read.rs  request.rs  thread.rs  voice.rs
turn/: .env.example  Dockerfile  Makefile  go.mod  go.sum  main.go
turn/internal/: auth.go  config.go  server.go
(+426 files in other folders)
