[package]
name = "dilla-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header", "limit", "fs"] }

# Database
rusqlite = { version = "0.39", features = ["bundled-sqlcipher"] }

# Auth & Crypto
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hkdf = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.22"
hex = "0.4"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Rate limiting
governor = "0.10"
tower_governor = "0.6"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Embed
rust-embed = "8"

# WebRTC
webrtc = "0.17"
async-trait = "0.1"

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-client", "trace", "metrics", "logs", "internal-logs"] }
tracing-opentelemetry = "0.32"

# Regex (route sanitisation)
regex = "1"

# Federation transport
tokio-tungstenite = { version = "0.29", features = ["connect"] }

# HTTP client (for TURN API calls)
reqwest = { version = "0.13", features = ["json", "rustls"] }

# Force TLS on the reqwest 0.12 that opentelemetry-otlp pulls in
reqwest_012 = { package = "reqwest", version = "0.12", features = ["rustls-tls"] }

# OTel HTTP client deps
opentelemetry-http = "0.31"
http = "1"

[dev-dependencies]
tempfile = "3"
