[package]
name = "dilla-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
nnnoiseless = "0.1"
tiny_http = "0.12.0"
open = "5.3.3"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
