[package]
name = "dilla-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nnnoiseless = "0.1"
rand = "0.8"
base64 = "0.22"
# auth_server dependencies
tiny_http = "0.12.0"
open = "5.3.3"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
